[build-system]
requires = ["setuptools", "wheel", "katversion", "setuptools_scm"]

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude ='''
/(
		  \.eggs	# exclude a few common directories
		| \.git		# in the root of the project
		| \.hg
		| \.mypy_cache
		| \.nox
		| \.tox
		| \.venv
		| _build
		| buck-out
		| build
		| dist
)/
'''
