[metadata]
name = aiokatcp
description = Asynchronous I/O implementation of the katcp protocol
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Bruce Merry
author_email = bmerry@sarao.ac.za
url = https://github.com/ska-sa/aiokatcp
license = BSD
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Framework :: AsyncIO
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Astronomy
keywords =
    asyncio
    katcp

[options]
package_dir =
    = src
packages = find:
install_requires =
    async-timeout
    decorator>=4.1
    katcp-codec
    typing-extensions
python_requires = >=3.8
zip_safe = False  # For py.typed

[options.extras_require]
test =
    async-solipsism
    pytest
    pytest-asyncio
    pytest-mock
doc =
    sphinx
    sphinx-rtd-theme

[options.packages.find]
where = src

[options.package_data]
* = py.typed

[options.entry_points]
console_scripts =
    katcpcmd = aiokatcp.tools.katcpcmd:main
